--- a/app/src/main/res/layout/fragment_ektp_movements_item_details.xml
+++ b/app/src/main/res/layout/fragment_ektp_movements_item_details.xml
@@ -136,19 +136,6 @@
                             app:layout_constraintStart_toEndOf="@id/amountDetailCardView"
                             app:layout_constraintTop_toTopOf="@id/amountDetailCardView" />
 
-                        <ImageButton
-                            android:id="@+id/shareButtonDetailsCardView"
-                            android:layout_width="@dimen/_14sdp"
-                            android:layout_height="@dimen/_19sdp"
-                            android:layout_marginTop="@dimen/_20sdp"
-                            android:layout_marginEnd="@dimen/_21sdp"
-                            android:background="@drawable/ic_share_icon"
-                            android:maxWidth="@dimen/_50sdp"
-                            android:maxHeight="@dimen/_50sdp"
-                            android:padding="@dimen/_30sdp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent" />
-
                         <TextView
                             android:id="@+id/titleDetailCardView"
                             android:layout_width="wrap_content"
@@ -320,6 +307,30 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
+
+                <ImageButton
+                    android:id="@+id/shareButtonDetailsCardView"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_34sdp"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:background="@drawable/ic_share_icon"
+                    android:padding="@dimen/_30sdp"
+                    app:layout_constraintTop_toBottomOf="@id/headerDetailsCardView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_80sdp"
+                    android:layout_marginBottom="@dimen/_40sdp"
+                    android:text="@string/bottom_help_label"
+                    android:theme="@style/text_button_2"
+                    android:gravity="center"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/shareButtonDetailsCardView"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
