Layout ajsutado en compartir

--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_40sdp"
                     android:gravity="center"
-                    android:text="@string/shipment_ok"
+                    android:text="@string/receive_details_share_image_title_shipment_label"
                     android:theme="@style/subtitle_5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -262,10 +262,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_45sdp"
-                    android:layout_marginStart="@dimen/_66sdp"
-                    android:layout_marginEnd="@dimen/_66sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:text="@string/share_details_button"
                     android:theme="@style/bottom_button"
+                    android:background="@drawable/enable_disable_red"
                     app:layout_constraintTop_toBottomOf="@+id/stDetailCardView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
