comportamiento del los campos de codigo en cambio de contraseña draft

--- a/app/src/main/res/layout/fragment_ektp_forgotten_pass_authorization_code.xml
+++ b/app/src/main/res/layout/fragment_ektp_forgotten_pass_authorization_code.xml
@@ -138,6 +138,7 @@
                         android:imeOptions="actionNext"
                         android:inputType="number"
                         android:maxLength="1"
+                        android:maxLines="1"
                         android:theme="@style/code_text" />
 
                     <EditText
