change to share icon

--- a/app/src/main/res/layout/fragment_ektp_movements_item_details.xml
+++ b/app/src/main/res/layout/fragment_ektp_movements_item_details.xml
@@ -548,7 +548,7 @@
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_34sdp"
                     android:layout_marginTop="@dimen/_30sdp"
-                    android:background="@drawable/ic_share_icon"
+                    android:background="@drawable/ic_android_share"
                     android:padding="@dimen/_30sdp"
                     app:layout_constraintTop_toBottomOf="@id/headerDetailsCardView"
                     app:layout_constraintStart_toStartOf="parent"
