--- a/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
+++ b/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
@@ -90,7 +90,7 @@
                     android:layout_height="@dimen/_28sdp"
                     android:layout_marginTop="@dimen/_30sdp"
                     android:padding="@dimen/_20sdp"
-                    android:background="@drawable/ic_share_icon"
+                    android:background="@drawable/ic_android_share"
                     app:layout_constraintTop_toBottomOf="@id/receivedSuccessAdviceTextView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
