--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -13,8 +13,7 @@
             android:id="@+id/CreateAccountNavigatorHost"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:navGraph="@navigation/create_account_navigator"/>
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
