--- a/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
+++ b/app/src/main/res/layout/fragment_receive_mtcn_acount_succes.xml
@@ -72,7 +72,8 @@
                     android:layout_marginTop="@dimen/_25sdp"
                     app:layout_constraintTop_toBottomOf="@+id/moneyReceivedSuccessfullyImageView"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:ignore="HardcodedText" />
 
                 <TextView
                     android:id="@+id/receivedSuccessAdviceTextView"
