--- a/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
+++ b/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
@@ -313,10 +313,6 @@
                         android:theme="@style/hint_edit_text"
                         android:buttonTint="@color/elektra_soft_red"/>
 
-                    <Space
-                        android:layout_width="@dimen/_18sdp"
-                        android:layout_height="wrap_content"/>
-
                     <RadioButton
                         android:id="@+id/manGenderRadioButton"
                         android:layout_width="wrap_content"
@@ -324,7 +320,8 @@
                         android:text="@string/fragment_form_gender_man"
                         android:enabled="false"
                         android:theme="@style/hint_edit_text"
-                        android:buttonTint="@color/elektra_soft_red"/>
+                        android:buttonTint="@color/elektra_soft_red"
+                        android:layout_marginStart="@dimen/_15sdp"/>
                 </LinearLayout>
                 <TextView
                     android:id="@+id/postalCodeLabel"
@@ -500,9 +497,6 @@
                         android:theme="@style/hint_edit_text"
                         android:importantForAutofill="no"
                         tools:ignore="TextFields" />
-                    <Space
-                        android:layout_width="@dimen/_18sdp"
-                        android:layout_height="wrap_content"/>
 
                     <EditText
                         android:id="@+id/interiorNumber"
@@ -516,7 +510,8 @@
                         android:padding="@dimen/_10sdp"
                         android:theme="@style/hint_edit_text"
                         android:importantForAutofill="no"
-                        tools:ignore="TextFields" />
+                        tools:ignore="TextFields"
+                        android:layout_marginStart="@dimen/_10sdp"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -541,10 +536,6 @@
                         android:textColor="@color/elektra_red"
                         android:visibility="invisible" />
 
-                    <Space
-                        android:layout_width="@dimen/_18sdp"
-                        android:layout_height="wrap_content"/>
-
                     <TextView
                         android:id="@+id/invalidInteriorText"
                         android:layout_width="@dimen/_134sdp"
@@ -554,7 +545,8 @@
                         android:theme="@style/hint_edit_text"
                         android:visibility="invisible"
                         android:text="@string/invalid_data"
-                        android:textColor="@color/elektra_red" />
+                        android:textColor="@color/elektra_red"
+                        android:layout_marginStart="@dimen/_10sdp"/>
 
                 </LinearLayout>
 
